<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.vistaAbout.AboutView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Descripcion"
            app:layout_constraintBottom_toTopOf="@+id/txt_paginaCasa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_paginaCasaAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_PaginaCasa"
            app:layout_constraintBottom_toTopOf="@+id/txt_gracias"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_paginaCasa"
            app:layout_constraintVertical_bias="0.871" />

        <TextView
            android:id="@+id/txt_paginaCasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Autor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.051" />

        <TextView
            android:id="@+id/txt_gracias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Gracias"
            app:layout_constraintBottom_toTopOf="@+id/txt_nombresGracias"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_paginaCasa"
            app:layout_constraintVertical_bias="0.927" />

        <TextView
            android:id="@+id/txt_conclusion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Conclusion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_paginaCasa"
            app:layout_constraintVertical_bias="0.974" />

        <TextView
            android:id="@+id/txt_licencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Licencia"
            app:layout_constraintBottom_toTopOf="@+id/txt_paginaCasaAbout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.777"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_paginaCasa"
            app:layout_constraintVertical_bias="0.882" />

        <TextView
            android:id="@+id/txt_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Copyright"
            app:layout_constraintBottom_toTopOf="@+id/txt_paginaCasaAbout"
            app:layout_constraintEnd_toStartOf="@+id/txt_licencia"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_paginaCasa"
            app:layout_constraintVertical_bias="0.882" />

        <TextView
            android:id="@+id/txt_nombresGracias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Thanks"
            app:layout_constraintBottom_toTopOf="@+id/txt_conclusion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_paginaCasa"
            app:layout_constraintVertical_bias="0.933" />

        <ImageView
            android:id="@+id/img_about"
            android:layout_width="139dp"
            android:layout_height="101dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/imagen_about"
            app:layout_constraintBottom_toTopOf="@+id/txt_pieFoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_paginaCasa"
            app:layout_constraintVertical_bias="0.111" />

        <TextView
            android:id="@+id/txt_pieFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_PieFoto"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_copyright"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_paginaCasa"
            app:layout_constraintVertical_bias="0.847" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>